# droid-utils

./: APN.json  README.md  pyproject.toml
app/: __main__.py  align.py  open.py  swipe.py
