[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "droid-utils"
version = "0.1.0"
description = "ADB & scrcpy automation toolkit"
authors = [
  {name = "Your Name", email = "your@email.com"}
]
dependencies = [
  "pywinctl",
  "pyautogui",
  "logzero",
  "tqdm",
  "psutil"
]

[project.scripts]
droidctl-open = "app.open:main"
droidctl-align = "app.align:main"
droidctl-swipe = "app.swipe:main"
droidctl-recover = "app.recover:main"
